--- a/Release_ANSI/Doc/ChangeLog.txt
+++ b/Release_ANSI/Doc/ChangeLog.txt
@@ -713,3 +713,12 @@ http://www.mediafire.com/?mhif8c7s3iayqac/
 - fixed: failed to dump the multi-session disc from 20200604
 - fixed: buf size to store the fullpath
 - improved: subQ Adr 6
+
+*2021-02-02
+- added: 0xF1 drive (ASUS BW-16D1HT 3.00, HL-DT-ST BH14NS40 1.00 N1A11A1, BH14NS58 1.00,
+                     BH16NS40 1.00 N1A29A2, 1.02 N000200, BH16NS55 1.00, 1.01, 1.02,
+                     BH16NS58 1.00, WH14NS40 1.00 N001401, 1.02 N000100, WH16NS40 1.02 N001401)
+- added: output DVD_COPYRIGHT_DESCRIPTOR and DVD_MANUFACTURER_DESCRIPTOR to mdsReadable log
+- fixed: detect SecuROM 1st version (216 errors)
+- fixed: analyze CD-TEXT
+- deleted: xbox xtreme log
