--- a/Release_ANSI/Doc/ChangeLog.txt
+++ b/Release_ANSI/Doc/ChangeLog.txt
@@ -728,3 +728,7 @@ http://www.mediafire.com/?mhif8c7s3iayqac/
 - added: securomV3_3 (no test)
 - fixed: /sf doesn't affect all sectors
 - fixed: _mdsReadable.txt
+
+*2021-04-01
+- changed: check C2 error "F0 F0 F0 00 00 00 0F 0F 0F" by plextor only
+- fixed: error occurred by findstr when there is a space in the path
