--- a/Release_ANSI/Doc/ChangeLog.txt
+++ b/Release_ANSI/Doc/ChangeLog.txt
@@ -741,3 +741,12 @@ http://www.mediafire.com/?mhif8c7s3iayqac/
 - fixed: check c2 error "00 f0 f0 f0 00 00 00 0f 0f 0f 00"
 - fixed: SubQ adr6
 - improved: multi sector reading of the 0xf1 drive
+
+*2021-07-01
+- fixed: only use 1st 0xb0 (FULL TOC)
+- fixed: escaped the encrypted PARAM.SFO
+- fixed: ASUS FW does not support dumping multi-session discs for my tool because it can't read the lead-in sector of the 2nd session
+- fixed: 0x7f, 0xff...0xff of subRtoW are not detected as error
+- fixed: failed to dump the GD-ROM
+- fixed: cannot get PVD due to one pregap sector
+- fixed: failed to dump the multi-session disc that has offsets over 2352 bytes (Sonic The Hedgehog (Germany) (4 014548 004785))
