--- a/Release_ANSI/Doc/ChangeLog.txt
+++ b/Release_ANSI/Doc/ChangeLog.txt
@@ -760,3 +760,6 @@ http://www.mediafire.com/?mhif8c7s3iayqac/
 - fixed: msf of main channel when reading multisession
 - fixed: Nintendo Optical Disc dumping for some drive
 - fixed: when 1st pregap sector has an incorrect index and isn't well-known pregap size (225, 150, 149), can't fix it correctly.
+
+*2021-11-01
+- fixed: ReadErrorProtect
