--- a/Release_ANSI/Doc/ChangeLog.txt
+++ b/Release_ANSI/Doc/ChangeLog.txt
@@ -778,3 +778,9 @@ http://www.mediafire.com/?mhif8c7s3iayqac/
 - fixed: disk space checking for linux
 - fixed: when used .petite, it's skipped reading Export, Import, Resource data due to the compressed data
 - fixed: dumping of "Star Wars - Shadows of the Empire Soundtrack"
+
+*2022-03-01
+- added: /rr flag for DVD/BD retry to read
+- added: check if the directory record length is really correct (The Shooting Love: XII Stag & Trizeal [DVD] (Japan))
+- fixed: the buffer size when analyzing the IFO files
+- fixed: Xbox/Xbox360 generates an incorrect hash
