--- a/Release_ANSI/Doc/ChangeLog.txt
+++ b/Release_ANSI/Doc/ChangeLog.txt
@@ -805,3 +805,10 @@ http://www.mediafire.com/?mhif8c7s3iayqac/
 - fixed: cue with INDEX 01 00:00:255
 - fixed: Console output still missing after a strange filename
 - changed: DWORD to UINT (Linux does not detect some SecuROM protection)
+
+*2022-09-09
+- added: /rr for xbox command
+- changed: log message of gamecube and wii
+- fixed: failed to dump gamecube disc since 5 Sep 2021
+- fixed: check the directory record length
+- improved: /re and /fix
