--- a/Release_ANSI/Doc/ChangeLog.txt
+++ b/Release_ANSI/Doc/ChangeLog.txt
@@ -836,3 +836,13 @@ http://www.mediafire.com/?mhif8c7s3iayqac/
 - changed: TOC vs. Subs are desync about the control(data/audio) flag, TOC in priority. Subs are created as "(Subs control)"
 - improved: log of the CD sync
 - fixed: ISRC issue of cuesheet for "Nine Inch Nails - Broken"
+
+*2023-04-01
+- added: Track[0] to _SubReadable.txt
+- added: (Track 0), (Track 1)(-LBA), (Track AA), (Track all) when audio CD is dumped
+- added: get non-zero byte position (1st and last) of the each track to the _disc.txt
+- added: SIZE_OF_ARRAY macro
+- deleted: /vrfy option and related code
+- fixed: universal hash (changed sample base, not byte)
+- fixed: the range of the SubQ check
+- fixed: and improved C2 error recovering
